Commit after authenticate
Authentication has been implemented.

--- a/src/BillsApi/appsettings.Development.json
+++ b/src/BillsApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "SecretKey": "DevSecretKeyForTesting1234567890!@#$"
   }
 }
