--- a/src/BillsApi/appsettings.Production.json
+++ b/src/BillsApi/appsettings.Production.json
@@ -20,5 +20,9 @@
   },
   "Cors": {
     "AllowedOrigins": [ "http://192.168.4.127:8151" ]
+  },
+  "Jwt": {
+    "Issuer": "BillsApi",
+    "Audience": "BillsApiUsers"
   }
 }
