--- a/src/BillsApi/appsettings.json
+++ b/src/BillsApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=bills.db"
+  },
+  "Jwt": {
+    "SecretKey": "CHANGE_THIS_TO_A_SECURE_KEY_AT_LEAST_32_CHARS_LONG",
+    "Issuer": "BillsApi",
+    "Audience": "BillsApiUsers"
   }
 }
