Add password reset flow and email senders
Implements a password reset feature and email infrastructure. Adds models (PasswordResetToken, ForgotPasswordRequest, ResetPasswordRequest), requires Email on User/RegisterRequest and indexes it, and extends BillsDbContext with a PasswordResetTokens DbSet and mapping. Introduces IEmailSender plus SMTP and Mailgun implementations and config (appsettings.Production.json). Wires SmtpEmailSender as the IEmailSender, serves static files, and adds a reset-password.html UI. Adds endpoints for /auth/forgot-password, /auth/reset-password, and authenticated account deletion; tokens are generated, stored as SHA256 hashes, single-use and time-limited, and email send failures are logged while responses remain generic to avoid user enumeration. Also updates HTTP examples (BillsApi.http) and minor program validations and wiring.

--- a/src/BillsApi/appsettings.Production.json
+++ b/src/BillsApi/appsettings.Production.json
@@ -25,5 +25,16 @@
     "Issuer": "BillsApi",
     "Audience": "BillsApiUsers",
     "SecretKey": "your_secret_key_here"
+  },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "Username": "your-email@gmail.com",
+    "Password": "YOUR_GMAIL_APP_PASSWORD",
+    "From": "noreply@duksducks.ca"
+  },
+  "Auth": {
+    "ResetPasswordBaseUrl": "https://bills.dukesducks.ca/billsapi/reset-password.html"
   }
 }
